fix: replaced px with rem's for font-size, padding, margin, line height and letter spacing

--- a/style.css
+++ b/style.css
@@ -19,55 +19,54 @@ html {
 
 .gameBoard {
     max-width: 1024px;
-    margin: 30px auto;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    margin: 1.25rem auto;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.2);
 }
 
 .gameBoard__title {
-    font-size: 56px;
+    font-size: 2.3rem;
     text-align: center;
     letter-spacing: 0.2rem;
 }
 
 .gameBoard__description {
-    font-size: 24px;
     line-height: 2rem;
     letter-spacing: 0.1rem;
-    padding: 0 24px;
+    padding: 0 1rem;
 }
 
 .gameBoard__restart-btn {
     width: 250px;
     height: 40px;
-    border: 5px solid #f88c8c;
+    border: 0.21rem solid #f88c8c;
     background-color: #f88c8c;
-    font-size: 24px;
+    font-size: 1rem;
     font-family: 'VT323', monospace;
-    margin-bottom: 16px;
+    margin-bottom: 0.7rem;
     cursor: pointer;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .gameBoard__players {
-    margin-bottom: 24px;
+    margin-bottom: 1rem;
 }
 
 .gameBoard__scorePanel {
     width: 250px;
     height: 100px;
-    border: 5px solid #f88c8c;
+    border: 0.21rem solid #f88c8c;
     margin: 0 auto;
-    font-size: 80px;
+    font-size: 3.25rem;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .gameBoard__icon {
     width: 200px;
-    border: 5px solid #fff;
-    margin: 50px 16px 16px 24px;
+    border: 0.21rem solid #fff;
+    margin: 2.1rem 0.7rem 0.7rem 1rem;
     cursor: pointer;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
@@ -77,7 +76,7 @@ html {
 }
 
 .gameBoard__gameText-msg {
-    font-size: 30px;
+    font-size: 1.25rem;
 }
 
 .gameBoard__sounds {
@@ -89,18 +88,18 @@ html {
         padding: 0;
     }
     .gameBoard__title {
-        margin: 24px;
-        font-size: 48px;
+        margin: 1rem;
+        font-size: 2rem;
     }
     .gameBoard__description {
         line-height: 1rem;
     }
     .gameBoard__scorePanel {
-        height: 50px;
-        font-size: 40px;
+        height: 2.1rem;
+        font-size: 1.67rem;
     }
     .gameBoard__gameText-msg {
-        font-size: 24px;
+        font-size: 1rem;
     }
     .gameBoard__icon {
         width: 114px;
@@ -110,30 +109,30 @@ html {
 
 @media screen and (max-width: 360px) {
     .gameBoard {
-        margin: 8px;
+        margin: 0.33rem;
         padding: 0;
     }
     .gameBoard__title {
-        font-size: 36px;
-        margin-bottom: 16px;
+        font-size: 1.5rem;
+        margin-bottom: 0.67rem;
     }
     .gameBoard__description {
-        font-size: 18px;
+        font-size: 0.75rem;
         letter-spacing: 0px;
         text-align: justify;
     }
     .gameBoard__players {
-        margin-bottom: 8px;
+        margin-bottom: 0.33rem;
     }
     .gameBoard__restart-btn {
-        margin-bottom: 8px;
+        margin-bottom: 0.33rem;
     }
     .gameBoard__scorePanel {
         height: 50px;
-        font-size: 40px;
+        font-size: 1.67rem;
     }
     .gameBoard__gameText-msg {
-        font-size: 24px;
+        font-size: 1rem;
     }
     .gameBoard__icon {
         width: 94px;
